<resources>
    <string name="app_name">BleConfigWifi</string>
    <string name="start_scan">开始扫描</string>
    <string name="stop_scan">关闭扫描</string>
    <string name="please_open_blue">请先打开蓝牙</string>
    <string name="notifyTitle">提示</string>
    <string name="gpsNotifyMsg">手机扫描蓝牙需要打开定位功能</string>
    <string name="cancel">取消</string>
    <string name="setting">前往设置</string>
    <string name="connect">连接</string>
    <string name="connected">已连接</string>
    <string name="disconnect">断开连接</string>
    <string name="enter">进入</string>
    <string name="connect_fail">连接失败</string>
    <string name="active_disconnected">断开了</string>
    <string name="disconnected">连接断开</string>
    <string name="txt_ssid">ssid</string>
    <string name="setting_ssid">输入ssid值</string>
    <string name="text_psw">password</string>
    <string name="setting_passwd">输入密码</string>
    <string name="buttion_wificonnect">连接</string>
    <string name="buttion_wifistate">状态查询</string>
    <string name="txt_wifistate">连接查询</string>
    <string name="btn_conf">START CONFIGURATION</string>
    <string name="btn_stop_conf">Stop Configuration</string>
    <string name="text_bssid">bssid</string>
    <string name="text_custom">用户自定义数据</string>
    <string name="text_success">配网成功</string>
    <string name="btn_sendcustomdata">send custom data</string>
    <string name="text_ssid">ssid</string>
</resources>
